--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "prepublishOnly": "npm run build",
     "serve:docs": "npm run build:docs && http-server ./docs -c-1",
     "test": "jest src --maxWorkers=2",
-    "test:integration": "jest integration-tests --maxWorkers=2 --coverage=false"
+    "test:integration": "jest integration-tests --maxWorkers=2 --coverage=false",
+    "start": "webpack-dev-server --host 0.0.0.0"
   },
   "repository": {
     "type": "git",
@@ -63,20 +64,42 @@
     "babel-jest": "^27.2.5",
     "babel-loader": "^8.1.0",
     "babel-plugin-lodash": "^3.3.4",
+    "css-declaration-sorter": "^6.1.3",
+    "cssnano": "^5.0.8",
+    "es6-promise": "^4.2.8",
     "eslint": "^7.10.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.0.2",
     "eslint-plugin-jsdoc": "^30.6.3",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-babel": "^8.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-csscomb": "^3.1.0",
+    "gulp-merge-media-queries": "^0.2.1",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^9.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-typescript": "^2.12.2",
+    "gulp-uglify": "^3.0.2",
+    "html-webpack-plugin": "^5.3.2",
     "http-server": "^13.0.2",
     "jest": "^27.2.5",
     "jsdoc": "^3.6.6",
     "q": "^1.5.1",
     "webpack": "^5.58.2",
-    "webpack-cli": "^4.9.0"
+    "webpack-cli": "^4.9.0",
+    "workbox-webpack-plugin": "^6.3.0"
   },
   "dependencies": {
+    "autoprefixer": "^10.3.7",
     "axios": "^0.23.0",
-    "lodash": "^4.17.20"
+    "gulp": "^4.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-update": "^0.0.2",
+    "lodash": "^4.17.20",
+    "print-js": "^1.6.0",
+    "printme": "^1.0.1",
+    "webpack-dev-server": "^4.3.1"
   }
 }
