--- a/package.json
+++ b/package.json
@@ -72,15 +72,15 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.0.2",
     "eslint-plugin-jsdoc": "^30.6.3",
-    "gulp-autoprefixer": "^8.0.0",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-babel": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
-    "gulp-csscomb": "^3.1.0",
+    "gulp-csscomb": "^0.1.0",
     "gulp-merge-media-queries": "^0.2.1",
     "gulp-plumber": "^1.2.1",
     "gulp-postcss": "^9.0.1",
     "gulp-rename": "^2.0.0",
-    "gulp-typescript": "^2.12.2",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
     "html-webpack-plugin": "^5.3.2",
     "http-server": "^13.0.2",
@@ -94,7 +94,7 @@
   "dependencies": {
     "autoprefixer": "^10.3.7",
     "axios": "^0.23.0",
-    "gulp": "^4.0.0",
+    "gulp": "^3.9.1",
     "gulp-sass": "^5.0.0",
     "gulp-update": "^0.0.2",
     "lodash": "^4.17.20",
